1.导入了我的部分的图片。 2.更改了view的默认背景颜色。 3.个人信息

--- a/Zeus/Base.lproj/InfoViewController.storyboard
+++ b/Zeus/Base.lproj/InfoViewController.storyboard
@@ -16,15 +16,137 @@
                     <view key="view" contentMode="scaleToFill" id="XFX-Wg-QHv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Mc-nu-jyj" customClass="CellBaseContainerView" customModule="Zeus" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="65"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="头像" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SoS-pz-B9C">
+                                        <rect key="frame" x="20" y="22" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Akj-Dz-Njm">
+                                        <rect key="frame" x="290" y="8" width="50" height="50"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="NSq-HH-t4z"/>
+                                            <constraint firstAttribute="width" constant="50" id="YA7-Ku-BHq"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="62Q-OY-nyC"/>
+                                    <constraint firstItem="Akj-Dz-Njm" firstAttribute="centerY" secondItem="4Mc-nu-jyj" secondAttribute="centerY" id="Y0v-I7-uhR"/>
+                                    <constraint firstAttribute="trailing" secondItem="Akj-Dz-Njm" secondAttribute="trailing" constant="35" id="j9Q-ZT-iMr"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zL0-I0-GnS" customClass="CellBaseContainerView" customModule="Zeus" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="129" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="名字" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Upy-Ut-mUn">
+                                        <rect key="frame" x="20" y="14" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wk5-cZ-07A">
+                                        <rect key="frame" x="324" y="16" width="16" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Wk5-cZ-07A" secondAttribute="trailing" constant="35" id="UxW-cz-fdB"/>
+                                    <constraint firstItem="Wk5-cZ-07A" firstAttribute="centerY" secondItem="zL0-I0-GnS" secondAttribute="centerY" id="VId-5b-VuK"/>
+                                    <constraint firstAttribute="height" constant="50" id="of5-TI-265"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AJH-pu-Q4h" customClass="CellBaseContainerView" customModule="Zeus" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="179" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="公司" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nnu-qr-PPd">
+                                        <rect key="frame" x="20" y="14" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8N-JU-0Be">
+                                        <rect key="frame" x="324" y="15" width="16" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="3EG-Yu-fx9"/>
+                                    <constraint firstItem="h8N-JU-0Be" firstAttribute="centerY" secondItem="AJH-pu-Q4h" secondAttribute="centerY" id="Fi2-yq-Y00"/>
+                                    <constraint firstAttribute="trailing" secondItem="h8N-JU-0Be" secondAttribute="trailing" constant="35" id="JSP-ue-x8n"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gkh-UU-Mu5" customClass="CellBaseContainerView" customModule="Zeus" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="229" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="职位" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U9H-wo-wX0">
+                                        <rect key="frame" x="20" y="14" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gos-hd-NBC">
+                                        <rect key="frame" x="324" y="15" width="16" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="gos-hd-NBC" secondAttribute="trailing" constant="35" id="9UN-nT-p8e"/>
+                                    <constraint firstAttribute="height" constant="50" id="fUx-mv-VOS"/>
+                                    <constraint firstItem="gos-hd-NBC" firstAttribute="centerY" secondItem="gkh-UU-Mu5" secondAttribute="centerY" id="sK8-rF-PYL"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96862745100000003" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="gkh-UU-Mu5" firstAttribute="top" secondItem="AJH-pu-Q4h" secondAttribute="bottom" id="0cc-Vv-NlK"/>
+                            <constraint firstItem="AJH-pu-Q4h" firstAttribute="leading" secondItem="XFX-Wg-QHv" secondAttribute="leading" id="1Jt-St-BXb"/>
+                            <constraint firstItem="4Mc-nu-jyj" firstAttribute="top" secondItem="lhv-Nh-SL6" secondAttribute="bottom" id="256-xi-Spy"/>
+                            <constraint firstItem="4Mc-nu-jyj" firstAttribute="leading" secondItem="XFX-Wg-QHv" secondAttribute="leading" id="2oi-oW-rWd"/>
+                            <constraint firstItem="zL0-I0-GnS" firstAttribute="leading" secondItem="XFX-Wg-QHv" secondAttribute="leading" id="G9y-5I-D3i"/>
+                            <constraint firstItem="zL0-I0-GnS" firstAttribute="top" secondItem="4Mc-nu-jyj" secondAttribute="bottom" id="JWP-jh-UHd"/>
+                            <constraint firstAttribute="trailing" secondItem="zL0-I0-GnS" secondAttribute="trailing" id="KMI-Uc-f3M"/>
+                            <constraint firstAttribute="trailing" secondItem="AJH-pu-Q4h" secondAttribute="trailing" id="Ojm-QH-yj1"/>
+                            <constraint firstAttribute="trailing" secondItem="4Mc-nu-jyj" secondAttribute="trailing" id="TmZ-Cz-BDg"/>
+                            <constraint firstAttribute="trailing" secondItem="gkh-UU-Mu5" secondAttribute="trailing" id="WN9-cE-KKj"/>
+                            <constraint firstItem="AJH-pu-Q4h" firstAttribute="top" secondItem="zL0-I0-GnS" secondAttribute="bottom" id="ZXc-tF-Lf4"/>
+                            <constraint firstItem="gkh-UU-Mu5" firstAttribute="leading" secondItem="XFX-Wg-QHv" secondAttribute="leading" id="mPM-N2-t2W"/>
+                        </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="companyCellView" destination="AJH-pu-Q4h" id="jYM-pZ-cvn"/>
+                        <outlet property="headCellView" destination="4Mc-nu-jyj" id="s7H-r9-351"/>
+                        <outlet property="nameCellView" destination="zL0-I0-GnS" id="XXB-6x-Nf7"/>
+                        <outlet property="positionCellView" destination="gkh-UU-Mu5" id="Oqm-Fr-KLC"/>
+                        <segue destination="0xh-nj-n9f" kind="show" identifier="showEditInfoViewController" id="nN7-No-kDB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jog-hm-0gN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="638.5" y="896.5"/>
+            <point key="canvasLocation" x="204.5" y="456.5"/>
+        </scene>
+        <!--EditInfoViewController-->
+        <scene sceneID="0jL-eK-6nv">
+            <objects>
+                <viewControllerPlaceholder storyboardName="EditInfoViewController" id="0xh-nj-n9f" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0QA-qx-Sim" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="690.5" y="456.5"/>
         </scene>
     </scenes>
 </document>
