--- a/Zeus/Base.lproj/Main.storyboard
+++ b/Zeus/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <scene sceneID="8uT-zw-KE3">
             <objects>
                 <navigationController id="H0X-Fh-SVB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的" image="first" id="ucJ-4r-qHw"/>
+                    <tabBarItem key="tabBarItem" title="我的" image="my_h" id="ucJ-4r-qHw"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="KwE-ve-f89">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -48,16 +48,16 @@
                                                     <constraint firstAttribute="height" constant="60" id="8Cd-h6-rjb"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WF1-QZ-LKA">
-                                                <rect key="frame" x="77" y="18" width="125" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="15068877369" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfq-eu-Gjv">
-                                                <rect key="frame" x="78" y="42" width="125" height="21"/>
+                                                <rect key="frame" x="78" y="40" width="125" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="张三" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WF1-QZ-LKA">
+                                                <rect key="frame" x="78" y="19" width="125" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -68,12 +68,67 @@
                                             <constraint firstAttribute="height" constant="80" id="bdh-mk-M5S"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="esP-mO-ezM" customClass="CellBaseContainerView" customModule="Zeus" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="115" width="375" height="50"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_associated" translatesAutoresizingMaskIntoConstraints="NO" id="VzJ-Fy-8MC">
+                                                <rect key="frame" x="10" y="14" width="22" height="22"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="22" id="BqY-CN-65N"/>
+                                                    <constraint firstAttribute="height" constant="22" id="S74-QY-sXx"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="我的关联" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJf-OA-eeI">
+                                                <rect key="frame" x="42" y="15" width="98" height="20"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Ctn-bc-Wzu"/>
+                                            <constraint firstItem="VzJ-Fy-8MC" firstAttribute="leading" secondItem="esP-mO-ezM" secondAttribute="leading" constant="10" id="dbZ-zi-7T1"/>
+                                            <constraint firstItem="VzJ-Fy-8MC" firstAttribute="centerY" secondItem="esP-mO-ezM" secondAttribute="centerY" id="eSJ-Jg-64m"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Vv-my-LPg" customClass="CellBaseContainerView" customModule="Zeus" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="165" width="375" height="50"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_systemsettings" translatesAutoresizingMaskIntoConstraints="NO" id="TjS-Ot-ISW">
+                                                <rect key="frame" x="10" y="14" width="22" height="22"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="22" id="TRq-uf-c19"/>
+                                                    <constraint firstAttribute="height" constant="22" id="aq8-yr-Up6"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="系统设置" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohh-Sn-GZo">
+                                                <rect key="frame" x="40" y="15" width="98" height="20"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="G9a-de-pFV"/>
+                                            <constraint firstItem="TjS-Ot-ISW" firstAttribute="leading" secondItem="7Vv-my-LPg" secondAttribute="leading" constant="10" id="Y1i-BJ-1nb"/>
+                                            <constraint firstItem="TjS-Ot-ISW" firstAttribute="centerY" secondItem="7Vv-my-LPg" secondAttribute="centerY" id="zj4-P8-clb"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="esP-mO-ezM" firstAttribute="top" secondItem="iJO-nh-Np2" secondAttribute="bottom" constant="25" id="5hD-bO-AYT"/>
+                                    <constraint firstItem="esP-mO-ezM" firstAttribute="leading" secondItem="fV0-TU-y25" secondAttribute="leading" id="98m-AR-Sfv"/>
                                     <constraint firstAttribute="trailing" secondItem="iJO-nh-Np2" secondAttribute="trailing" id="CSY-q9-XC8"/>
                                     <constraint firstItem="iJO-nh-Np2" firstAttribute="leading" secondItem="fV0-TU-y25" secondAttribute="leading" id="DwN-vU-g0N"/>
                                     <constraint firstItem="iJO-nh-Np2" firstAttribute="top" secondItem="fV0-TU-y25" secondAttribute="top" constant="10" id="QVN-Hk-OLe"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Vv-my-LPg" secondAttribute="trailing" id="Tta-wV-RP6"/>
+                                    <constraint firstAttribute="trailing" secondItem="esP-mO-ezM" secondAttribute="trailing" id="anN-d2-rHD"/>
+                                    <constraint firstItem="7Vv-my-LPg" firstAttribute="leading" secondItem="fV0-TU-y25" secondAttribute="leading" id="f9Y-zW-dFC"/>
                                     <constraint firstAttribute="bottom" secondItem="iJO-nh-Np2" secondAttribute="bottom" constant="524" id="oXK-OE-EyO"/>
+                                    <constraint firstItem="7Vv-my-LPg" firstAttribute="top" secondItem="esP-mO-ezM" secondAttribute="bottom" id="wT1-RE-non"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -102,7 +157,7 @@
         <scene sceneID="1tk-IY-78W">
             <objects>
                 <navigationController id="dp7-Sl-I7i" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="活动" image="first" id="2A7-yI-Fja"/>
+                    <tabBarItem key="tabBarItem" title="活动" image="activity_h" id="2A7-yI-Fja"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3du-UY-Rc2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -165,10 +220,10 @@
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" id="6RY-Yh-UmL">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7w3-rc-nH2">
-                                <rect key="frame" x="447" y="7" width="133" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="7w3-rc-nH2">
+                                <rect key="frame" x="556" y="10" width="24" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Add"/>
+                                <state key="normal" image="add_btn"/>
                                 <connections>
                                     <segue destination="B1q-YU-oVr" kind="show" id="Wsh-6A-Q36"/>
                                 </connections>
@@ -188,7 +243,7 @@
         <scene sceneID="wOc-zb-RDf">
             <objects>
                 <navigationController id="5go-gV-fHN" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="客户" image="second" id="tG9-Gp-iMR"/>
+                    <tabBarItem key="tabBarItem" title="客户" image="customer_h" id="tG9-Gp-iMR"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vyV-E5-9HJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -289,7 +344,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="activity_h" width="29" height="29"/>
+        <image name="add_btn" width="24" height="24"/>
+        <image name="customer_h" width="29" height="29"/>
+        <image name="my_associated" width="22" height="22"/>
+        <image name="my_h" width="29" height="29"/>
+        <image name="my_systemsettings" width="22" height="22"/>
     </resources>
 </document>
