--- a/Zeus/Base.lproj/EditInfoViewController.storyboard
+++ b/Zeus/Base.lproj/EditInfoViewController.storyboard
@@ -53,7 +53,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="rGq-2Q-ioh">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="MZw-Rm-uYz">
+                        <barButtonItem key="rightBarButtonItem" style="done" id="MZw-Rm-uYz">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="95v-nv-Bzy">
                                 <rect key="frame" x="276" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
